--- a/index.html
+++ b/index.html
@@ -28,7 +28,55 @@
             </form>
         </div>
 
-        <!-- Continue com os outros dias -->
+        <!-- Quarta-feira -->
+        <div class="day" id="wednesday">
+            <h2>Quarta-feira</h2>
+            <ul id="wednesday-list" class="task-list"></ul>
+            <form class="add-task" data-day="wednesday">
+                <input type="text" placeholder="Adicionar tarefa..." required />
+                <button type="submit">Adicionar</button>
+            </form>
+        </div>
+
+        <!-- Quinta-feira -->
+        <div class="day" id="thursday">
+            <h2>Quinta-feira</h2>
+            <ul id="thursday-list" class="task-list"></ul>
+            <form class="add-task" data-day="thursday">
+                <input type="text" placeholder="Adicionar tarefa..." required />
+                <button type="submit">Adicionar</button>
+            </form>
+        </div>
+
+        <!-- Sexta-feira -->
+        <div class="day" id="friday">
+            <h2>Sexta-feira</h2>
+            <ul id="friday-list" class="task-list"></ul>
+            <form class="add-task" data-day="friday">
+                <input type="text" placeholder="Adicionar tarefa..." required />
+                <button type="submit">Adicionar</button>
+            </form>
+        </div>
+
+        <!-- Sábado -->
+        <div class="day" id="saturday">
+            <h2>Sábado</h2>
+            <ul id="saturday-list" class="task-list"></ul>
+            <form class="add-task" data-day="saturday">
+                <input type="text" placeholder="Adicionar tarefa..." required />
+                <button type="submit">Adicionar</button>
+            </form>
+        </div>
+
+        <!-- Domingo -->
+        <div class="day" id="sunday">
+            <h2>Domingo</h2>
+            <ul id="sunday-list" class="task-list"></ul>
+            <form class="add-task" data-day="sunday">
+                <input type="text" placeholder="Adicionar tarefa..." required />
+                <button type="submit">Adicionar</button>
+            </form>
+        </div>
     </div>
 
     <script src="script.js"></script>
